# sbom-tools

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  deny.toml  osv-scanner.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  fuzz.yml  publish-crates.yml  rust.yml  scorecard.yml
benches/: diff_benchmark.rs  large_sbom.rs
docs/: ARCHITECTURE.md  REFACTORING_PLAN.md  pipeline-diagrams.md
examples/: ecosystem-rules.yaml
fuzz/: Cargo.toml
fuzz/corpus/seed/: cdx_minimal.json  cdx_minimal.xml  spdx_minimal.json  spdx_tagvalue.spdx
fuzz/fuzz_targets/: fuzz_cyclonedx_json.rs  fuzz_cyclonedx_xml.rs  fuzz_detect_format.rs  fuzz_parse_sbom.rs  fuzz_spdx_json.rs  fuzz_spdx_tagvalue.rs
scripts/: capture-screenshots.sh  release.sh
src/: error.rs  lib.rs  main.rs
src/cli/: diff.rs  mod.rs  multi.rs  quality.rs  query.rs  validate.rs  view.rs  watch.rs
src/config/: defaults.rs  file.rs  mod.rs  types.rs  validation.rs
src/diff/: cost.rs  engine.rs  engine_config.rs  engine_matching.rs  engine_rules.rs  graph.rs  incremental.rs  mod.rs  multi.rs  multi_engine.rs  result.rs  traits.rs  vertex.rs
src/diff/changes/: components.rs  dependencies.rs  licenses.rs  mod.rs  vuln_grouping.rs  vulnerabilities.rs
src/enrichment/: cache.rs  mod.rs  stats.rs  traits.rs
src/enrichment/eol/: client.rs  mapping.rs  mod.rs
src/enrichment/kev/: catalog.rs  client.rs  mod.rs
src/enrichment/osv/: client.rs  mapper.rs  mod.rs  response.rs
src/enrichment/staleness/: mod.rs  registry.rs
src/enrichment/vex/: mod.rs  openvex.rs
src/matching/: adaptive.rs  aliases.rs  config.rs  cross_ecosystem.rs  custom_rules.rs  ecosystem_config.rs  embedding.rs  index.rs  lsh.rs  mod.rs  purl.rs  rule_engine.rs  rules.rs  scoring.rs  string_similarity.rs  traits.rs
src/model/: cra_sidecar.rs  identifiers.rs  index.rs  license.rs  metadata.rs  mod.rs  sbom.rs  vulnerability.rs
src/parsers/: cyclonedx.rs  detection.rs  mod.rs  spdx.rs  streaming.rs  traits.rs
src/pipeline/: diff_stage.rs  mod.rs  output.rs  parse.rs  report_stage.rs
src/quality/: compliance.rs  metrics.rs  mod.rs  scorer.rs
src/reports/: analyst.rs  csv.rs  escape.rs  html.rs  json.rs  markdown.rs  mod.rs  sarif.rs  sidebyside.rs  streaming.rs  summary.rs  types.rs
src/tui/: app.rs  app_impl_constructors.rs  app_impl_items.rs  app_impl_nav.rs  app_impl_search.rs  clipboard.rs  constants.rs  export.rs  license_conflicts.rs  license_utils.rs  mod.rs  security.rs  state.rs  theme.rs  traits.rs  ui.rs
src/tui/app_states/: compliance.rs  components.rs  dependencies.rs  graph_changes.rs  licenses.rs  matrix.rs  mod.rs  multi_diff.rs  navigation.rs  overlays.rs  quality.rs  search.rs  sidebyside.rs  source.rs  timeline.rs  vulnerabilities.rs
src/tui/events/: compliance.rs  components.rs  dependencies.rs  graph_changes.rs  helpers.rs  licenses.rs  matrix.rs  mod.rs  mouse.rs  multi_diff.rs  quality.rs  sidebyside.rs  source.rs  timeline.rs  vulnerabilities.rs
src/tui/shared/: compliance.rs  components.rs  export.rs  licenses.rs  mod.rs  quality.rs  source.rs  vulnerabilities.rs
src/tui/view/: app.rs  events.rs  mod.rs  severity.rs  ui.rs
src/tui/view/views/: compliance.rs  dependencies.rs  licenses.rs  mod.rs  overview.rs  quality.rs  source.rs  tree.rs  vulnerabilities.rs
src/tui/view_states/: mod.rs  quality.rs
src/tui/viewmodel/: filter.rs  mod.rs  overlay.rs  search.rs  security_filter.rs  status.rs
src/tui/views/: components.rs  dependencies.rs  diff_compliance.rs  graph_changes.rs  licenses.rs  matrix.rs  mod.rs  multi_dashboard.rs  overlays.rs  quality.rs  sidebyside.rs  source.rs  summary.rs  timeline.rs  vulnerabilities.rs
src/tui/widgets/: change_badge.rs  mod.rs  severity_badge.rs  sparkline.rs  tree.rs
src/utils/: hash.rs  mod.rs  version.rs
src/watch/: alerts.rs  config.rs  loop_impl.rs  mod.rs  monitor.rs  state.rs
tests/: cra_readiness_tests.rs  eol_tests.rs  golden_fixtures.rs  graph_tests.rs  integration_tests.rs  pipeline_tests.rs  proptest_parsers.rs  proptest_types.rs  quality_complexity.rs  query_tests.rs  vex_tests.rs  watch_tests.rs
tests/fixtures/: demo-eol-new.cdx.json  demo-eol-old.cdx.json  demo-new.cdx.json  demo-old.cdx.json
tests/fixtures/cyclonedx/: with-vulnerabilities.cdx.json
tests/fixtures/spdx/: minimal.spdx.rdf.xml  osv-scanner.toml
tests/fixtures/vex/: openvex-sample.json
